<resources>
    <string name="app_name">RendezVous</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Okaerinasai "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="uscita_title">uscita_title</string>
    <string name="date">date</string>
    <string name="new_take_out">new_take_out</string>
    <string name="selected_date">Nessuna data selezionata</string>
    <string name="open_calendar">Select days</string>
    <string name="logoDescr">Logo for RendezVous</string>
    <string name="navDescription">Navigation Button</string>
    <string name="take_out_cards">Take Out Cards</string>
    <string name="calendar_take_out">Calendar Take Out</string>
    <string name="name">Name</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_captured">image_captured</string>
    <string name="description">Description</string>
    <string name="take_gps_position">take gps position</string>
    <string name="location">Add a location</string>
    <string name="helper_show_date">Selected dates</string>
    <string name="checkbox1">caso1</string>
    <string name="checkbox2">caso2</string>
    <string name="checkbox3">caso3</string>
    <string name="checkbox4">caso4</string>
    <string name="checkbox5">caso5</string>
    <string name="surname">Surname</string>
    <string name="compiled_user_page">Compiled User Page</string>
    <string name="container_for_group_circles">Container for group circles</string>
    <string name="click_to_change_avatar_image">Click to change avatar image</string>
    <string name="selected_circle">Select one or more circles of friends</string>
    <string name="confirm_the_address">confirm the address</string>
    <string name="swipe_to_select_a_day_or_delete">Swipe to select a day or delete</string>
    <string name="more_info">More info</string>
    <string name="add_the_place_of_the_take_out">Add the place of the take out</string>
    <string name="check_the_distance">Check the distance</string>
    <string name="loading">loading... waiting</string>
    <string name="click_the_gps_button_to_get_your_location">Click the gps to get your location</string>
    <string name="click_the_gps">Please, click the gps button</string>
    <string name="close">Close</string>
    <string name="permission_denied">Permission denied, but needed for gps functionality.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="gps_is_off">Your GPS is off, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_button_to_get_distance">Click on the gps button to see the distance between you and your take out into the card!</string>
    <string name="dates">Dates</string>
    <string name="personal_account">Personal Account</string>
    <string name="close_log_out">Close/Log Out</string>
    <string name="logo">logo</string>
    <string name="address_not_correct">The address is not correct</string>
    <string name="such_an_empty_nwinners_always_make_the_first_move">Such an empty.... \nWinners always make the first move!</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="distance_between_me_and_the_place_of_the_take_out">Distance between me and the place of the Take Out</string>
    <string name="open_the_map">Open the map</string>
    <string name="username">Username</string>
    <string name="reminder_whatsapp">Send an invitation reminder on whatsapp</string>
</resources>