<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_40o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_80v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_32o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_56o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


    <TextView
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:focusableInTouchMode="false"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_32o" />

    <EditText
            android:id="@+id/username_r"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/corner_radius"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:shadowColor="@color/black"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@id/guideline_80v"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_40o" />

    <EditText
        android:id="@+id/password_r"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/corner_radius"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:shadowColor="@color/black"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:elevation="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@id/guideline_80v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_r" />

    <EditText
        android:id="@+id/name_r"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/corner_radius"
        android:hint="@string/name"
        android:elevation="5dp"
        android:selectAllOnFocus="true"
        android:shadowColor="@color/black"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@id/guideline_80v"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_r" />

    <EditText
        android:id="@+id/surname_r"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:elevation="5dp"
        android:background="@drawable/corner_radius"
        android:hint="@string/surname"
        android:selectAllOnFocus="true"
        android:shadowColor="@color/black"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@id/guideline_80v"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_r" />


    <ImageButton
        android:id="@+id/confirmed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="324dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_radius_shifter"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_56o"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

    <Button
        android:id="@+id/login__register"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:text="@string/sign_in"
        android:textColor="@color/colorSecondaryVariant"
        app:backgroundTint="@null"
        app:elevation="55dp"
        app:layout_constraintTop_toBottomOf="@id/surname_r"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>